Fixed spacing issues in greet section and adjusted card margins

--- a/src/Components/Main/main.css
+++ b/src/Components/Main/main.css
@@ -92,13 +92,18 @@
 @media (max-width: 480px) {
     .main .greet {
         font-size: 32px;
-        margin-bottom: 30px 0px;
+        margin-bottom: 0px;
+        margin-top: -5px;
     }
 
     .main .cards {
         margin-top: 20px;
         gap: 10px;
+    }
 
+    .main .card:nth-child(1),
+    .main .card:nth-child(2) {
+        margin-top: -25px;
     }
 }
 
@@ -167,7 +172,7 @@
 }
 
 .result img {
-    width: 40px;
+    width: 30px;
     border-radius: 50%;
 }
 
@@ -208,6 +213,13 @@
     font-size: 17px;
     font-weight: 300;
     line-height: 1.8;
+}
+
+@media (max-width: 600px) {
+    .result-data p {
+        font-size: 11px;
+        line-height: 1.3;
+    }
 }
 
 @media (max-width: 600px) {
@@ -265,7 +277,6 @@
         padding-bottom: 5px;
     }
 
-
 }
 
 
@@ -315,4 +326,12 @@
     -webkit-text-fill-color: transparent;
     letter-spacing: 0.5px;
 
+}
+
+@media (max-width: 600px) {
+    .masudhan {
+        display: block;
+        text-align: center;
+        margin-left: 0;
+    }
 }
